tests/errors/syntax_errors/dict_str_keys.py
# pylint: disable=missing-function-docstring, missing-module-docstring/
a = {'a': 1, 'b':2}
